# anthropic-monitor

./: .env.example  .gitignore  Dockerfile  README.md  monitor.config.json  pyproject.toml
.github/workflows/: monitor.yml  tests.yml
cowork-skill/anthropic-monitor/: Skill.md
docs/: ARCHITECTURE.md
src/api/: main.py  middleware.py
src/api/routes/: health.py  settings.py  subscribers.py
src/config/: loader.py  schema.py
src/monitor/: business_hours.py  detector.py  health.py  models.py  queue.py  scheduler.py  scraper.py  summarizer.py
src/notifiers/: base.py  email.py  slack.py  webhook.py
src/subscribers/: store.py  tokens.py
tests/integration/: test_full_run.py
tests/unit/: test_business_hours.py  test_detector.py  test_health_route.py  test_scraper.py  test_tokens.py
